(lang dune 3.3)
(name io)
(generate_opam_files true)
(source (github ocaml-multicore/kcas))
(authors "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(maintainers "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(homepage "https://github.com/polytypic/io")
(license "0BSD")
(package (name io)
 (synopsis "IO should be just a function")
 (allow_empty)
 (depends
  (ocaml (>= 5.0))

  (domain-local-await (>= 0.2.1))
  (domain-local-timeout (>= 0.1.0))
  (kcas (>= 0.5.3))
  (kcas_data (>= 0.5.3))
  (lockfree (>= 0.3.1))
  (mtime (>= 2.0.0))
  (psq (>= 0.2.1))

  (alcotest (and (>= 1.7.0) :with-test))
  (mdx (and (>= 1.10.0) :with-test))))
(using mdx 0.2)
